# hp_public_kss

./: .gitignore  App.axaml  App.axaml.cs  FaceLocker.csproj  Program.cs  ViewLocator.cs  app.manifest  appsettings.json  faceLocker.sln  run_release.sh  快速参考卡.txt  部署指南.md
Converters/: Converters.cs
Data/: database.db
Extensions/: ListExtensions.cs  SimpleLogFormatter.cs
Models/: AccessLog.cs  AuthMode.cs  Locker.cs  Role.cs  User.cs  UserLocker.cs
Models/Enums/: FeedbackMode.cs  OperationMode.cs
Models/Settings/: AppSettings.cs  BaiduFaceSettings.cs  CameraSettings.cs  DatabaseSettings.cs  LockControllerSettings.cs  SecuritySettings.cs  ServerSettings.cs
Properties/PublishProfiles/: FolderProfile.pubxml
Services/Cameras/: GStreamerCameraService.cs  GStreamerInterop.cs  ICameraService.cs  NativeVideoCameraService.cs  V4L2MppCameraService.cs
Services/Databases/: AccessLogService.cs  DatabaseService.cs  DatabaseStartupInitializer.cs  FaceLockerDbContext.cs  IAccessLogService.cs  IDatabaseService.cs  IDatabaseStartupInitializer.cs  ILockerService.cs  IRoleService.cs  IUserService.cs  LockerService.cs  RoleService.cs  UserService.cs
Services/FaceRecognitions/: BaiduFaceSDKInteropPart1.cs  BaiduFaceSDKInteropPart2.cs  BaiduFaceSDKInteropPart3.cs  BaiduFaceSDKInteropPart4.cs  BaiduFaceSDKInteropPart5.cs  BaiduFaceSDKInteropPart6.cs  BaiduFaceService.cs  FaceBoxRenderer.cs  FaceTracker.cs
Services/LockControls/: ILockControlService.cs  LockControlService.cs
Services/Networks/: DataSyncService.cs  IDataSyncService.cs  INetworkService.cs  NetworkMessage.cs  NetworkService.cs  ResponseModel.cs
Services/Systems/: AdminLoginService.cs  AppConfigManager.cs  AppStateService.cs  EnvironmentCheckService.cs  IAdminLoginService.cs  IAppConfigManager.cs  IAppStateService.cs  IEnvironmentCheckService.cs  IOperationModeService.cs  ISessionAuthService.cs  OperationModeService.cs  SessionAuthService.cs
ViewModels/: AdminLoginViewModel.cs  MainWindowViewModel.cs  RetrieveWindowViewModel.cs  StoreWindowViewModel.cs  ViewModelBase.cs
ViewModels/Admin/: AdminAccessLogViewModel.cs  AdminLockViewModel.cs  AdminMainViewModel.cs  AdminSettingsViewModel.cs  AdminUserViewModel.cs
ViewModels/NumPad/: NumPadDialogViewModel.cs
Views/: AdminLoginWindow.axaml  AdminLoginWindow.axaml.cs  MainWindow.axaml  MainWindow.axaml.cs  RetrieveWindow.axaml  RetrieveWindow.axaml.cs  StoreWindow.axaml  StoreWindow.axaml.cs
Views/Admin/: AdminAccessLogView.axaml  AdminAccessLogView.axaml.cs  AdminLockView.axaml  AdminLockView.axaml.cs  AdminMainWindow.axaml  AdminMainWindow.axaml.cs  AdminSettingsView.axaml  AdminSettingsView.axaml.cs  AdminUserView.axaml  AdminUserView.axaml.cs
Views/Controls/: FaceBoxOverlay.cs  FaceBoxPopup.cs  NativeVideoHost.cs
Views/NumPad/: NumPadDialogView.axaml  NumPadDialogView.axaml.cs
Views/NumPadControls/: NumPadButton.cs  NumPadControl.axaml  (+1 more)
native/v4l2_mpp_camera/: CMakeLists.txt  build_all.sh  gst_video_player.c  gst_video_player.h  test_camera.c  test_gst_player.c  v4l2_mpp_camera.c  v4l2_mpp_camera.h
scripts/: README.txt  build-and-run.sh  install-dependencies.sh  install-dotnet.sh  run.sh
